<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.lenta.LentaFragment">


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="40dp" />

            <LinearLayout
                android:id="@+id/stat1"
                android:layout_width="match_parent"
                android:layout_height="203dp"
                android:background="@drawable/news_border"
                android:orientation="vertical"
                android:clickable="true">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lin9"
                    android:textSize="20dp"/>


                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lin10" />

                <ImageView
                    android:id="@+id/imageView12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/stat5" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="5dp" />
            </LinearLayout>
            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp"/>
            <LinearLayout
                android:id="@+id/stat2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@drawable/news_border"
                android:clickable="true">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lin7"
                    android:textSize="18dp"/>

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lin8" />

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/stat4" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="5dp" />
            </LinearLayout>
            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp"/>
            <LinearLayout
                android:id="@+id/stat3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@drawable/news_border"
                android:clickable="true">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lin5"
                    android:textSize="20dp"/>

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lin6" />

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="match_parent"
                    android:layout_height="128dp"
                    android:src="@drawable/stat3" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="5dp" />

            </LinearLayout>
            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />
            <LinearLayout
                android:id="@+id/stat4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/news_border"
                android:clickable="true"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/lin3"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/lin4" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="match_parent"
                    android:layout_height="136dp"
                    android:layout_weight="1"
                    android:src="@drawable/tink_photo2" />
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <LinearLayout
                android:id="@+id/stat5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/news_border"
                android:orientation="vertical"
                android:clickable="true">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:text="@string/lin1"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lin2" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="139dp"
                    android:src="@drawable/zast" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="14dp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <ImageButton
        android:id="@+id/setButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:background="#00000000"
        android:src="@drawable/round_settings_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="VectorDrawableCompat" />

    <ImageButton
        android:id="@+id/accButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="#00000000"
        android:src="@drawable/round_account_circle_black_36"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>